compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__results__error_fn.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "pub fn main() { Error }"
---
----- SOURCE CODE
pub fn main() { Error }

----- COMPILED JAVASCRIPT
import { Error } from "../gleam.mjs";

export function main() {
  return (var0) => { return new Error(var0); };
}
